<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/weightLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:labelFor="@+id/weight"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/weightUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/weightUnits" />

    </LinearLayout>

    <Switch
        android:id="@+id/presetDosage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/presetDosage"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TableLayout
        android:id="@+id/dosageTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="30dp"
        android:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@+id/minorDose"
                android:text="@string/minorDose"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/minorDose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@+id/majorDose"
                android:text="@string/majorDose"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/majorDose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@+id/severeDose"
                android:text="@string/severeDose"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/severeDose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@+id/minorDoseTotal"
                android:text="@string/minorDoseTotal"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/minorDoseTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="end"
                android:text=""
                android:textSize="15sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@+id/majorDoseTotal"
                android:text="@string/majorDoseTotal"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/majorDoseTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="end"
                android:text=""
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@+id/severeDoseTotal"
                android:text="@string/severeDoseTotal"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/severeDoseTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="end"
                android:text=""
                android:textSize="15sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/submitSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:text="@string/submitSettings" />

</LinearLayout>